--- a/readme.text
+++ b/readme.text
@@ -8,7 +8,7 @@ SUCCESS: The process with PID 14288 has been terminated.
 install npm module : npm install react-scripts --save
 
 ----------------------------------------------------------------Project Steps--------------------------------------------------------------------------------
-follow this : https://www.youtube.com/watch?v=sh-MjDLyrgE
+follow this : https://www.youtube.com/watch?v=WDy4-m4V76Q
 
 1.Create account in CircleCi : login with github (easy to get repo)
 			       Select Project Repo
